packages/css-engine/crates/aihu-css-core/tests/snapshots/apply__arbitrary_value_variant_in_apply.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/apply.rs
assertion_line: 111
expression: css
---
.swatch {
  &:hover {
    background-color: #fff;
  }
}
