packages/css-engine/crates/aihu-css-core/tests/snapshots/apply__multiple_apply_directives_per_rule.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/apply.rs
assertion_line: 78
expression: css
---
.btn {
  display: inline-flex;
  border-radius: 0.375rem;
  &:hover {
    background-color: var(--color-accent);
  }
}
