packages/css-engine/crates/aihu-css-core/tests/snapshots/apply__single_variant_lifts_to_nested_rule.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/apply.rs
assertion_line: 54
expression: css
---
.btn {
  &:hover {
    background-color: var(--color-accent);
  }
}
